force-app/main/default/objects/CF_Call_Transcript__c/CF_Call_Transcript__c.object-meta.xml
<CustomObject>
    <label>Call Transcript</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Call Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>