force-app/main/default/objects/CF_Call_Transcript__c/fields/CF_Call_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Evaluation</label>
    <referenceTo>CF_Call_Evaluation__c</referenceTo>
    <relationshipLabel>Call Transcripts</relationshipLabel>
    <relationshipName>Call_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>