force-app/main/default/objects/CF_Call_Transcript__c/fields/CF_Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_Status__c</fullName>
    <label>Evaluation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evaluated</fullName>
            </value>
            <value>
                <fullName>Not Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>