force-app/main/default/objects/CF_Call_Transcript__c/fields/CF_Transcript_Text__c.field-meta.xml
<CustomField>
    <fullName>CF_Transcript_Text__c</fullName>
    <label>Transcript Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>