force-app/main/default/objects/CF_Call_Transcript__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CF_Call_Evaluation__c</columns>
    <columns>CF_Evaluation_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>